Fix navbar tab vertical alignment

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     width: 100%;
     position: fixed;
     top: 0;
-    background: rgba(8, 128, 192, 1);
+    background: #0880C0;
     border-bottom: solid 1px #eee;
 }
 .navbar-content {
@@ -26,14 +26,14 @@ body {
     height: 50px;
     display: inline-block;
     list-style-type: none;
+    padding: 15px 0;
     margin: 0;
-    padding: 0;
 }
 .navbar-tabs li {
     display: inline;
     font-family: 'Source Sans Pro', Helvetica;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 15px;
     padding: 15px 11px;
 }
 .navbar-tabs li:hover {
